parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> decls
Rule 3     decls -> decl
Rule 4     decls -> decls decl
Rule 5     decl -> statement
Rule 6     statement -> expression_statement
Rule 7     statement -> compound_statement
Rule 8     expression_statement -> expression
Rule 9     compound_statement -> LBRACE statement_list RBRACE
Rule 10    compound_statement -> LBRACE RBRACE
Rule 11    statement_list -> statement
Rule 12    statement_list -> statement_list statement
Rule 13    expression -> EXTERN FN ID prototype
Rule 14    expression -> FN ID prototype statement
Rule 15    prototype -> LPAREN RPAREN
Rule 16    prototype -> LPAREN param_list RPAREN
Rule 17    param_list -> param
Rule 18    param_list -> param_list COMMA param
Rule 19    param -> ID
Rule 20    expression -> expression ADD expression
Rule 21    expression -> expression MIN expression
Rule 22    expression -> expression MUL expression
Rule 23    expression -> expression DIV expression
Rule 24    expression -> expression EQ expression
Rule 25    expression -> expression NE expression
Rule 26    expression -> expression GT expression
Rule 27    expression -> expression LT expression
Rule 28    expression -> LET ID ASSIGN expression
Rule 29    expression -> LOOP statement
Rule 30    expression -> LOOP expression statement
Rule 31    expression -> ID ASSIGN expression
Rule 32    expression -> MIN expression
Rule 33    expression -> LPAREN expression RPAREN
Rule 34    expression -> NUMBER
Rule 35    expression -> ID
Rule 36    expression -> ID LPAREN RPAREN
Rule 37    expression -> ID LPAREN args RPAREN
Rule 38    args -> arg
Rule 39    args -> args COMMA arg
Rule 40    arg -> expression
Rule 41    expression -> IF expression statement
Rule 42    expression -> IF expression statement ELSE statement

Terminals, with rules where they appear

ADD                  : 20
ASSIGN               : 28 31
COMMA                : 18 39
DIV                  : 23
ELSE                 : 42
EQ                   : 24
EXTERN               : 13
FN                   : 13 14
GT                   : 26
ID                   : 13 14 19 28 31 35 36 37
IF                   : 41 42
LBRACE               : 9 10
LET                  : 28
LOOP                 : 29 30
LPAREN               : 15 16 33 36 37
LT                   : 27
MIN                  : 21 32
MUL                  : 22
NE                   : 25
NUMBER               : 34
RBRACE               : 9 10
RPAREN               : 15 16 33 36 37
error                : 

Nonterminals, with rules where they appear

arg                  : 38 39
args                 : 37 39
block                : 1
compound_statement   : 7
decl                 : 3 4
decls                : 2 4
expression           : 8 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 30 31 32 33 40 41 42
expression_statement : 6
param                : 17 18
param_list           : 16 18
program              : 0
prototype            : 13 14
statement            : 5 11 12 14 29 30 41 42 42
statement_list       : 9 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . decls
    (3) decls -> . decl
    (4) decls -> . decls decl
    (5) decl -> . statement
    (6) statement -> . expression_statement
    (7) statement -> . compound_statement
    (8) expression_statement -> . expression
    (9) compound_statement -> . LBRACE statement_list RBRACE
    (10) compound_statement -> . LBRACE RBRACE
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement

    LBRACE          shift and go to state 9
    EXTERN          shift and go to state 10
    FN              shift and go to state 11
    LET             shift and go to state 14
    LOOP            shift and go to state 15
    ID              shift and go to state 12
    MIN             shift and go to state 13
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    IF              shift and go to state 18

    program                        shift and go to state 1
    block                          shift and go to state 2
    decls                          shift and go to state 3
    decl                           shift and go to state 4
    statement                      shift and go to state 5
    expression_statement           shift and go to state 6
    compound_statement             shift and go to state 7
    expression                     shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> decls .
    (4) decls -> decls . decl
    (5) decl -> . statement
    (6) statement -> . expression_statement
    (7) statement -> . compound_statement
    (8) expression_statement -> . expression
    (9) compound_statement -> . LBRACE statement_list RBRACE
    (10) compound_statement -> . LBRACE RBRACE
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement

    $end            reduce using rule 2 (block -> decls .)
    LBRACE          shift and go to state 9
    EXTERN          shift and go to state 10
    FN              shift and go to state 11
    LET             shift and go to state 14
    LOOP            shift and go to state 15
    ID              shift and go to state 12
    MIN             shift and go to state 13
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    IF              shift and go to state 18

    decl                           shift and go to state 19
    statement                      shift and go to state 5
    expression_statement           shift and go to state 6
    compound_statement             shift and go to state 7
    expression                     shift and go to state 8

state 4

    (3) decls -> decl .

    LBRACE          reduce using rule 3 (decls -> decl .)
    EXTERN          reduce using rule 3 (decls -> decl .)
    FN              reduce using rule 3 (decls -> decl .)
    LET             reduce using rule 3 (decls -> decl .)
    LOOP            reduce using rule 3 (decls -> decl .)
    ID              reduce using rule 3 (decls -> decl .)
    MIN             reduce using rule 3 (decls -> decl .)
    LPAREN          reduce using rule 3 (decls -> decl .)
    NUMBER          reduce using rule 3 (decls -> decl .)
    IF              reduce using rule 3 (decls -> decl .)
    $end            reduce using rule 3 (decls -> decl .)


state 5

    (5) decl -> statement .

    LBRACE          reduce using rule 5 (decl -> statement .)
    EXTERN          reduce using rule 5 (decl -> statement .)
    FN              reduce using rule 5 (decl -> statement .)
    LET             reduce using rule 5 (decl -> statement .)
    LOOP            reduce using rule 5 (decl -> statement .)
    ID              reduce using rule 5 (decl -> statement .)
    MIN             reduce using rule 5 (decl -> statement .)
    LPAREN          reduce using rule 5 (decl -> statement .)
    NUMBER          reduce using rule 5 (decl -> statement .)
    IF              reduce using rule 5 (decl -> statement .)
    $end            reduce using rule 5 (decl -> statement .)


state 6

    (6) statement -> expression_statement .

    LBRACE          reduce using rule 6 (statement -> expression_statement .)
    EXTERN          reduce using rule 6 (statement -> expression_statement .)
    FN              reduce using rule 6 (statement -> expression_statement .)
    LET             reduce using rule 6 (statement -> expression_statement .)
    LOOP            reduce using rule 6 (statement -> expression_statement .)
    ID              reduce using rule 6 (statement -> expression_statement .)
    MIN             reduce using rule 6 (statement -> expression_statement .)
    LPAREN          reduce using rule 6 (statement -> expression_statement .)
    NUMBER          reduce using rule 6 (statement -> expression_statement .)
    IF              reduce using rule 6 (statement -> expression_statement .)
    $end            reduce using rule 6 (statement -> expression_statement .)
    RBRACE          reduce using rule 6 (statement -> expression_statement .)
    ADD             reduce using rule 6 (statement -> expression_statement .)
    MUL             reduce using rule 6 (statement -> expression_statement .)
    DIV             reduce using rule 6 (statement -> expression_statement .)
    EQ              reduce using rule 6 (statement -> expression_statement .)
    NE              reduce using rule 6 (statement -> expression_statement .)
    GT              reduce using rule 6 (statement -> expression_statement .)
    LT              reduce using rule 6 (statement -> expression_statement .)
    RPAREN          reduce using rule 6 (statement -> expression_statement .)
    COMMA           reduce using rule 6 (statement -> expression_statement .)
    ELSE            reduce using rule 6 (statement -> expression_statement .)


state 7

    (7) statement -> compound_statement .

    LBRACE          reduce using rule 7 (statement -> compound_statement .)
    EXTERN          reduce using rule 7 (statement -> compound_statement .)
    FN              reduce using rule 7 (statement -> compound_statement .)
    LET             reduce using rule 7 (statement -> compound_statement .)
    LOOP            reduce using rule 7 (statement -> compound_statement .)
    ID              reduce using rule 7 (statement -> compound_statement .)
    MIN             reduce using rule 7 (statement -> compound_statement .)
    LPAREN          reduce using rule 7 (statement -> compound_statement .)
    NUMBER          reduce using rule 7 (statement -> compound_statement .)
    IF              reduce using rule 7 (statement -> compound_statement .)
    $end            reduce using rule 7 (statement -> compound_statement .)
    RBRACE          reduce using rule 7 (statement -> compound_statement .)
    ADD             reduce using rule 7 (statement -> compound_statement .)
    MUL             reduce using rule 7 (statement -> compound_statement .)
    DIV             reduce using rule 7 (statement -> compound_statement .)
    EQ              reduce using rule 7 (statement -> compound_statement .)
    NE              reduce using rule 7 (statement -> compound_statement .)
    GT              reduce using rule 7 (statement -> compound_statement .)
    LT              reduce using rule 7 (statement -> compound_statement .)
    RPAREN          reduce using rule 7 (statement -> compound_statement .)
    COMMA           reduce using rule 7 (statement -> compound_statement .)
    ELSE            reduce using rule 7 (statement -> compound_statement .)


state 8

    (8) expression_statement -> expression .
    (20) expression -> expression . ADD expression
    (21) expression -> expression . MIN expression
    (22) expression -> expression . MUL expression
    (23) expression -> expression . DIV expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . NE expression
    (26) expression -> expression . GT expression
    (27) expression -> expression . LT expression

  ! shift/reduce conflict for ADD resolved as shift
  ! shift/reduce conflict for MIN resolved as shift
  ! shift/reduce conflict for MUL resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LT resolved as shift
    LBRACE          reduce using rule 8 (expression_statement -> expression .)
    EXTERN          reduce using rule 8 (expression_statement -> expression .)
    FN              reduce using rule 8 (expression_statement -> expression .)
    LET             reduce using rule 8 (expression_statement -> expression .)
    LOOP            reduce using rule 8 (expression_statement -> expression .)
    ID              reduce using rule 8 (expression_statement -> expression .)
    LPAREN          reduce using rule 8 (expression_statement -> expression .)
    NUMBER          reduce using rule 8 (expression_statement -> expression .)
    IF              reduce using rule 8 (expression_statement -> expression .)
    $end            reduce using rule 8 (expression_statement -> expression .)
    RBRACE          reduce using rule 8 (expression_statement -> expression .)
    RPAREN          reduce using rule 8 (expression_statement -> expression .)
    COMMA           reduce using rule 8 (expression_statement -> expression .)
    ELSE            reduce using rule 8 (expression_statement -> expression .)
    ADD             shift and go to state 20
    MIN             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    EQ              shift and go to state 24
    NE              shift and go to state 25
    GT              shift and go to state 26
    LT              shift and go to state 27

  ! MIN             [ reduce using rule 8 (expression_statement -> expression .) ]
  ! ADD             [ reduce using rule 8 (expression_statement -> expression .) ]
  ! MUL             [ reduce using rule 8 (expression_statement -> expression .) ]
  ! DIV             [ reduce using rule 8 (expression_statement -> expression .) ]
  ! EQ              [ reduce using rule 8 (expression_statement -> expression .) ]
  ! NE              [ reduce using rule 8 (expression_statement -> expression .) ]
  ! GT              [ reduce using rule 8 (expression_statement -> expression .) ]
  ! LT              [ reduce using rule 8 (expression_statement -> expression .) ]


state 9

    (9) compound_statement -> LBRACE . statement_list RBRACE
    (10) compound_statement -> LBRACE . RBRACE
    (11) statement_list -> . statement
    (12) statement_list -> . statement_list statement
    (6) statement -> . expression_statement
    (7) statement -> . compound_statement
    (8) expression_statement -> . expression
    (9) compound_statement -> . LBRACE statement_list RBRACE
    (10) compound_statement -> . LBRACE RBRACE
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement

    RBRACE          shift and go to state 29
    LBRACE          shift and go to state 9
    EXTERN          shift and go to state 10
    FN              shift and go to state 11
    LET             shift and go to state 14
    LOOP            shift and go to state 15
    ID              shift and go to state 12
    MIN             shift and go to state 13
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    IF              shift and go to state 18

    statement_list                 shift and go to state 28
    statement                      shift and go to state 30
    expression_statement           shift and go to state 6
    compound_statement             shift and go to state 7
    expression                     shift and go to state 8

state 10

    (13) expression -> EXTERN . FN ID prototype

    FN              shift and go to state 31


state 11

    (14) expression -> FN . ID prototype statement

    ID              shift and go to state 32


state 12

    (31) expression -> ID . ASSIGN expression
    (35) expression -> ID .
    (36) expression -> ID . LPAREN RPAREN
    (37) expression -> ID . LPAREN args RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    ASSIGN          shift and go to state 33
    ADD             reduce using rule 35 (expression -> ID .)
    MIN             reduce using rule 35 (expression -> ID .)
    MUL             reduce using rule 35 (expression -> ID .)
    DIV             reduce using rule 35 (expression -> ID .)
    EQ              reduce using rule 35 (expression -> ID .)
    NE              reduce using rule 35 (expression -> ID .)
    GT              reduce using rule 35 (expression -> ID .)
    LT              reduce using rule 35 (expression -> ID .)
    LBRACE          reduce using rule 35 (expression -> ID .)
    EXTERN          reduce using rule 35 (expression -> ID .)
    FN              reduce using rule 35 (expression -> ID .)
    LET             reduce using rule 35 (expression -> ID .)
    LOOP            reduce using rule 35 (expression -> ID .)
    ID              reduce using rule 35 (expression -> ID .)
    NUMBER          reduce using rule 35 (expression -> ID .)
    IF              reduce using rule 35 (expression -> ID .)
    $end            reduce using rule 35 (expression -> ID .)
    RBRACE          reduce using rule 35 (expression -> ID .)
    RPAREN          reduce using rule 35 (expression -> ID .)
    COMMA           reduce using rule 35 (expression -> ID .)
    ELSE            reduce using rule 35 (expression -> ID .)
    LPAREN          shift and go to state 34

  ! LPAREN          [ reduce using rule 35 (expression -> ID .) ]


state 13

    (32) expression -> MIN . expression
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement

    EXTERN          shift and go to state 10
    FN              shift and go to state 11
    LET             shift and go to state 14
    LOOP            shift and go to state 15
    ID              shift and go to state 12
    MIN             shift and go to state 13
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    IF              shift and go to state 18

    expression                     shift and go to state 35

state 14

    (28) expression -> LET . ID ASSIGN expression

    ID              shift and go to state 36


state 15

    (29) expression -> LOOP . statement
    (30) expression -> LOOP . expression statement
    (6) statement -> . expression_statement
    (7) statement -> . compound_statement
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement
    (8) expression_statement -> . expression
    (9) compound_statement -> . LBRACE statement_list RBRACE
    (10) compound_statement -> . LBRACE RBRACE

    EXTERN          shift and go to state 10
    FN              shift and go to state 11
    LET             shift and go to state 14
    LOOP            shift and go to state 15
    ID              shift and go to state 12
    MIN             shift and go to state 13
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    IF              shift and go to state 18
    LBRACE          shift and go to state 9

    statement                      shift and go to state 37
    expression                     shift and go to state 38
    expression_statement           shift and go to state 6
    compound_statement             shift and go to state 7

state 16

    (33) expression -> LPAREN . expression RPAREN
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement

    EXTERN          shift and go to state 10
    FN              shift and go to state 11
    LET             shift and go to state 14
    LOOP            shift and go to state 15
    ID              shift and go to state 12
    MIN             shift and go to state 13
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    IF              shift and go to state 18

    expression                     shift and go to state 39

state 17

    (34) expression -> NUMBER .

    ADD             reduce using rule 34 (expression -> NUMBER .)
    MIN             reduce using rule 34 (expression -> NUMBER .)
    MUL             reduce using rule 34 (expression -> NUMBER .)
    DIV             reduce using rule 34 (expression -> NUMBER .)
    EQ              reduce using rule 34 (expression -> NUMBER .)
    NE              reduce using rule 34 (expression -> NUMBER .)
    GT              reduce using rule 34 (expression -> NUMBER .)
    LT              reduce using rule 34 (expression -> NUMBER .)
    LBRACE          reduce using rule 34 (expression -> NUMBER .)
    EXTERN          reduce using rule 34 (expression -> NUMBER .)
    FN              reduce using rule 34 (expression -> NUMBER .)
    LET             reduce using rule 34 (expression -> NUMBER .)
    LOOP            reduce using rule 34 (expression -> NUMBER .)
    ID              reduce using rule 34 (expression -> NUMBER .)
    LPAREN          reduce using rule 34 (expression -> NUMBER .)
    NUMBER          reduce using rule 34 (expression -> NUMBER .)
    IF              reduce using rule 34 (expression -> NUMBER .)
    $end            reduce using rule 34 (expression -> NUMBER .)
    RBRACE          reduce using rule 34 (expression -> NUMBER .)
    RPAREN          reduce using rule 34 (expression -> NUMBER .)
    COMMA           reduce using rule 34 (expression -> NUMBER .)
    ELSE            reduce using rule 34 (expression -> NUMBER .)


state 18

    (41) expression -> IF . expression statement
    (42) expression -> IF . expression statement ELSE statement
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement

    EXTERN          shift and go to state 10
    FN              shift and go to state 11
    LET             shift and go to state 14
    LOOP            shift and go to state 15
    ID              shift and go to state 12
    MIN             shift and go to state 13
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    IF              shift and go to state 18

    expression                     shift and go to state 40

state 19

    (4) decls -> decls decl .

    LBRACE          reduce using rule 4 (decls -> decls decl .)
    EXTERN          reduce using rule 4 (decls -> decls decl .)
    FN              reduce using rule 4 (decls -> decls decl .)
    LET             reduce using rule 4 (decls -> decls decl .)
    LOOP            reduce using rule 4 (decls -> decls decl .)
    ID              reduce using rule 4 (decls -> decls decl .)
    MIN             reduce using rule 4 (decls -> decls decl .)
    LPAREN          reduce using rule 4 (decls -> decls decl .)
    NUMBER          reduce using rule 4 (decls -> decls decl .)
    IF              reduce using rule 4 (decls -> decls decl .)
    $end            reduce using rule 4 (decls -> decls decl .)


state 20

    (20) expression -> expression ADD . expression
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement

    EXTERN          shift and go to state 10
    FN              shift and go to state 11
    LET             shift and go to state 14
    LOOP            shift and go to state 15
    ID              shift and go to state 12
    MIN             shift and go to state 13
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    IF              shift and go to state 18

    expression                     shift and go to state 41

state 21

    (21) expression -> expression MIN . expression
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement

    EXTERN          shift and go to state 10
    FN              shift and go to state 11
    LET             shift and go to state 14
    LOOP            shift and go to state 15
    ID              shift and go to state 12
    MIN             shift and go to state 13
    LPAREN          shift and go to state 16
    NUMBER          shift and go to state 17
    IF              shift and go to state 18

    expression                     shift and go to state 42

state 22

    (22) expression -> expression MUL . expression
    (13) expression -> . EXTERN FN ID prototype
    (14) expression -> . FN ID prototype statement
    (20) expression -> . expression ADD expression
    (21) expression -> . expression MIN expression
    (22) expression -> . expression MUL expression
    (23) expression -> . expression DIV expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression NE expression
    (26) expression -> . expression GT expression
    (27) expression -> . expression LT expression
    (28) expression -> . LET ID ASSIGN expression
    (29) expression -> . LOOP statement
    (30) expression -> . LOOP expression statement
    (31) expression -> . ID ASSIGN expression
    (32) expression -> . MIN expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . ID
    (36) expression -> . ID LPAREN RPAREN
    (37) expression -> . ID LPAREN args RPAREN
    (41) expression -> . IF expression statement
    (42) expression -> . IF expression statement ELSE statement
